# voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arhitecture.md  design_update.md  design_update2.md  docker-compose.yml  livekit.toml  patch_archon.py  plan.md  pyproject.toml  requirements.txt  yandexapi.md
agent/: __init__.py  api_health.py  config.py  context.py  exolve_setup.py  logger.py  main.py  sip_setup.py  supabase_client.py  test_call.py  test_webrtc.py
agent/prompts/: __init__.py  assistant.md
agent/tools/: __init__.py  core.py  executor.py  models.py  time.py  weather.py
agent/yandex/: __init__.py  credentials.py  factory.py  llm.py  models.py  stt.py  tts.py
archon/: __init__.py  cometapi_llm.py  example_agent.py
deploy/livekit/: .env.example  Caddyfile  README.md  docker-compose.yml  livekit.yaml  setup.sh
deploy/monitoring/: README.md  deploy.ps1  deploy.sh  docker-compose.yml
deploy/monitoring/blackbox/: blackbox.yml
deploy/monitoring/nginx/conf.d/: default.conf
deploy/monitoring/prometheus/: prometheus.yml
deploy/monitoring/site-dist/: index-CYY4R_Ab.js  index.html
deploy/supabase/: schema.sql
deploy/yandex-cloud/: README.md  deploy.sh  docker-compose.prod.yml  vm-setup.sh
docs/: gemini-dashboard-ui-prompt.md  monitoring-stack-spec.md  yandex-cloud-migration.md
site/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
site/components/: Common.tsx  Layout.tsx
site/views/: AgentPerformance.tsx  CallHistory.tsx  Overview.tsx  VoiceQuality.tsx
tests/: __init__.py  conftest.py  test_api_health.py  test_config.py  test_context.py  test_logger.py  test_tools.py
